--- a/public/tailwind.css
+++ b/public/tailwind.css
@@ -1,3 +1,15 @@
 @tailwind base;
+
+h2 {
+    @apply text-xl;
+    @apply font-bold;
+    @apply mb-1;
+}
+
+h3 {
+    @apply font-semibold;
+}
+
 @tailwind components;
+
 @tailwind utilities;
